fix(material/progress-spinner): animation not working on some zoom levels in Safari (#23674)
Fixes that the progress spinner animation was broken on Safari on non-default zoom levels. The problem seems to be that the `transform-origin` was being offset by the amount of zoom. These changes work around it by setting the origin based on the zoom level.

Fixes #23668.

--- a/src/material/progress-spinner/progress-spinner.scss
+++ b/src/material/progress-spinner/progress-spinner.scss
@@ -26,7 +26,6 @@ $_default-circumference: variables.$pi * $_default-radius * 2;
   circle {
     @include private.private-animation-noop();
     fill: transparent;
-    transform-origin: center;
     transition: stroke-dashoffset 225ms linear;
 
     @include a11y.high-contrast(active, off) {
